--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dayjs": "^1.11.7",
+    "crypto": "^1.0.1",
+    "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "morgan": "^1.10.0",
-    "sqlite3": "^5.1.6"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "sqlite3": "^5.1.6",
+    "yup": "^1.2.0"
   }
 }
